Fixed comic display being 1 char too long

--- a/styles.css
+++ b/styles.css
@@ -752,6 +752,7 @@ summary {
     max-height: 2px;
     margin-top: 2px;
     overflow: clip;
+    margin-right: 1ch;
 }
 
 .alignment .alignment-body.comic>a.unique {
